# Relativistic_raytracer

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Image.h  PerlinNoise.h  colorCalculator.h  disk.h  kerr.h  kerr_newman.h  metric.h  perlin.h  scene.h  schwarzschild.h
scenes/: kerr.json  minkowski.json  scene_template.json  schwarzschild.json
src/: colorCalculator.cpp  disk.cpp  kerr.cpp  kerr_newman.cpp  main.cpp  metric.cpp  scene.cpp  schwarzschild.cpp
txtfiles/: cie_interpolated.txt
